--- a/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
+++ b/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
@@ -1,220 +1,241 @@
-@import url('https://fonts.googleapis.com/css?family=Maven+Pro|Open+Sans');
-
-h6 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-}
+@import url("https://fonts.googleapis.com/css?family=Maven+Pro|Open+Sans");
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300 !important;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300 !important;
 }
-
+.title {
+  font-family: "Dosis", sans-serif;
+  font-weight: 500;
+  font-size: 25px;
+}
 .logo {
-    height: 80%;
-    float: right;
-    margin-right: 10px;
+  /* height: 80%; */
+  height: 80%;
+  width: auto !important;
+  /* float: right; */
+  /* margin-right: 80px; */
 }
-
+.flex-display {
+  display: flex;
+}
+.single_div_toggle_style {
+  width: 80%;
+  /* display: flex; */
+  /* flex-direction: row; */
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.sweep_div_toggle_style {
+  /* display: flex; */
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: space-around;
+}
 .banner {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 60px;
-    padding-left: 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding-left: 5%;
 }
 
 .intro-banner {
-    padding-left: 5%;
-    padding-right: 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .intro-banner-content {
-    padding: 15px 0;
-    width:60%;
+  padding: 20px 20px;
+  width: 60%;
 }
 
 .intro-banner-text {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 #learn-more-button {
-    font-family: 'Maven Pro', sans-serif;
-    font-size: 13px;
-    height: 35px;
-    padding: 0 30px;
-    text-transform: capitalize;
+  font-family: "Maven Pro", sans-serif;
+  font-size: 13px;
+  height: 35px;
+  padding: 0 15px;
+  line-height: 0px;
+  border-radius: 0;
+  text-transform: capitalize;
 }
 
 #figure-card {
-    margin-left: 4.5%; /*Set this to balance margin gap in skeleton*/
-    border-radius: 10px;
-    box-shadow: 0 6px 14px rgba(80,103,132,.2);
-    display: flex;
-    height: 100% !important;
-    flex-direction: column;
-    justify-content: center;
+  margin-left: 4.5%; /*Set this to balance margin gap in skeleton*/
+  border-radius: 10px;
+  box-shadow: 0 6px 14px rgba(80, 103, 132, 0.2);
+  display: flex;
+  height: 100% !important;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #page-content > div {
-    width:100%;
+  width: 100%;
 }
 
-#figure-card > P {
-    font-weight: 500;
-    font-size: 16px;
-    margin-top: 5%;
+#figure-card > p {
+  font-weight: 500;
+  font-size: 16px;
+  margin-top: 5%;
 }
 
 #control-container {
-    vertical-align: top;
-    margin-left: 1%;
+  vertical-align: top;
+  margin-left: 1%;
 }
 
-#up-control-card, #mid-control-card, #bottom-card{
-    border-radius: 15px;
-    box-shadow: 0 6px 14px rgba(80,103,132,.2);
-    width: 100%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    line-height: 1.6;
+#up-control-card,
+#mid-control-card,
+#bottom-card {
+  border-radius: 15px;
+  box-shadow: 0 6px 14px rgba(80, 103, 132, 0.2);
+  width: 100%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  line-height: 1.6;
 }
 
-#control-sections{
-    display:flex;
-    flex-direction:column;
-    width: 80%;
-    line-height:1.8;
+#control-sections {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  line-height: 1.8;
 }
 
-#source-choice-toggle > label, #mode-choice-toggle >label {
-    padding:10px;
-    white-space:nowrap;
-
+#source-choice-toggle > label,
+#mode-choice-toggle > label {
+  padding: 10px;
+  white-space: nowrap;
 }
 
- #toggleTheme > label {
-     font-weight: 700;
- }
+#toggleTheme > label {
+  font-weight: 700;
+}
 
-.IV-source-options > label, .measure-options > label, #sweep-title > P {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    font-size: 15px;
+.IV-source-options > label,
+.measure-options > label,
+#sweep-title > p {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-size: 15px;
 }
 
 #source-div {
-    width: 100%;
+  width: 100%;
 }
 
-.IV-source-options, .measure-options {
-    width: 90%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    padding: 5px;
+.IV-source-options,
+.measure-options {
+  width: 90%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  padding: 5px;
 }
 
 #sweep-dt > div > span > input[type="text"] {
-    color: #95969A !important;
+  color: #95969a !important;
 }
 
 .daq-button > div > button {
-    border-radius: 25px;
-    font-size: 11px;
-    font-weight: normal;
-    background-color: #FF9827;
-    border:1px #FF9827;
-    margin: 10px 0px;
+  border-radius: 25px;
+  font-size: 11px;
+  font-weight: normal;
+  background-color: #ff9827;
+  border: 1px #ff9827;
+  margin: 10px 0px;
 }
 
 .daq-button > div > button:hover {
-    background-color: #FFC261 !important;
+  background-color: #ffc261 !important;
 }
 
 .react-numeric-input > input [type="text"] {
-    color: #595959 !important;
+  color: #595959 !important;
 }
 
-.sweep-div-row, .sweep-div-row-inner {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.sweep-div-row,
+.sweep-div-row-inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sweep-div-row {
-    width: 80%;
-    margin: 10px 0px;
+  width: 80%;
+  margin: 10px 0px;
 }
 
 #measure-div {
-    display: flex;
-    flex-direction: row;
-    width: 90%;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  justify-content: space-between;
 }
 
 #trigger-div {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    justify-content: space-between;
-    margin: 10px 0px;
-
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: space-between;
+  margin: 10px 0px;
 }
-
 
 /* The Modal (background) */
 .modal {
-    display: none; /*Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1005; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100vw; /* Full width */
-    height: 100vh; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  display: none; /*Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1005; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100vw; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .markdown-container {
-    width: 60vw;
-    margin: 10% auto;
-    padding: 10px 15px;
-    background-color: #F9F9F9;
-    border-radius: 10px;
+  width: 60vw;
+  margin: 10% auto;
+  padding: 10px 15px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
 }
 
 .close-container {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    height: 40px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 40px;
 }
 
 .closeButton {
-    padding: 0 15px;
-    font-weight: normal;
-    float: right;
-    font-size: 1.2rem;
-    height:100%;
-    border:none;
+  padding: 0 15px;
+  font-weight: normal;
+  float: right;
+  font-size: 1.2rem;
+  height: 100%;
+  border: none;
 }
 
 .closeButton:hover {
-    color: #FF9827 !important;
+  color: #ff9827 !important;
 }
-
-
