Lowered font-size

--- a/apps/dash-opioid-epidemic/assets/opioid.css
+++ b/apps/dash-opioid-epidemic/assets/opioid.css
@@ -306,10 +306,11 @@ p {
 }
 
 #description {
+    font-size: 1rem;
     border-left: #2cfec1 solid 1rem;
     padding-left: 1rem;
     max-width: 100rem;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
 }
 
 #slider-text, #chart-selector {
@@ -761,37 +762,6 @@ hr {
 
 #header {
     margin-left: 1.5%;
-}
-
-
-/* Media Queries
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/*
-Note: The best way to structure the use of media queries is to create the queries
-near the relevant code. For example, if you wanted to change the styles for buttons
-on small devices, paste the mobile query code up in the buttons section and style it
-there.
-*/
-
-
-/* Larger than mobile */
-@media (min-width: 400px) {
-}
-
-/* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {
-}
-
-/* Larger than tablet */
-@media (min-width: 750px) {
-}
-
-/* Larger than desktop */
-@media (min-width: 1000px) {
-}
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {
 }
 
 
