--- a/apps/dash-opioid-epidemic/assets/opioid.css
+++ b/apps/dash-opioid-epidemic/assets/opioid.css
@@ -236,10 +236,20 @@ body {
 }
 
 #root {
-    padding: 5rem !important;
     margin: 0;
 }
 
+@media (max-width: 550px) {
+    #root {
+        padding: 2rem;
+    }
+}
+
+@media (min-width: 551px) {
+    #root {
+        padding: 5rem;
+    }
+}
 
 
 /* Typography
@@ -315,7 +325,7 @@ p {
     margin: 2rem 0 3rem 0;
 }
 
-#logo{
+#logo {
     height: 5rem;
     margin-bottom: 2rem;
 }
@@ -326,12 +336,12 @@ p {
 }
 
 
-@media only screen and (max-width: 550px){
-    .rc-slider-mark-text{
+@media only screen and (max-width: 550px) {
+    .rc-slider-mark-text {
         font-size: 50%;
     }
 
-    #description{
+    #description {
         font-size: 1rem;
     }
 }
@@ -635,6 +645,7 @@ hr {
 #slider-container {
     background-color: #252e3f;
     padding: 2rem 6rem 4rem 4rem;
+    height: 8rem;
 }
 
 .rc-slider-dot-active, .rc-slider-handle {
@@ -659,12 +670,12 @@ hr {
 #heatmap-title {
     margin: 0;
     padding: 1rem;
+    height: 3rem;
 }
 
 #county-choropleth {
     margin: 0;
-    height: 59.5rem;
-    max-height: 59.5rem;
+    height: 58.5rem;
 }
 
 /* Left column
@@ -680,7 +691,9 @@ hr {
 @media (min-width: 1251px) {
     /*For desktop*/
     #left-column {
-        margin-right: 1.5%
+        margin-right: 1.5%;
+        height: 80rem;
+        max-height: 80rem;
     }
 }
 
@@ -688,16 +701,16 @@ hr {
 /* Graph
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+#graph-container {
+    margin: 0 0 10rem 0;
+    background-color: #252e3f;
+    padding: 5rem;
+    height: 80rem;
+    width: 100%;
+}
+
 @media (max-width: 1250px) {
     /*For mobile and smaller screens*/
-    #graph-container {
-        margin: 0 0 10rem 0;
-        background-color: #252e3f;
-        padding: 5rem;
-        height: 80rem;
-        width: 100%;
-    }
-
     #header h4 {
         text-align: center;
     }
@@ -705,22 +718,20 @@ hr {
 
 @media (min-width: 1251px) {
     /*For desktop*/
-    #graph-container {
-        margin: 0 0 10rem 0;
-        background-color: #252e3f;
-        padding: 5rem;
-        max-height: 80rem;
-        height: 80rem;
-    }
-
-    #logo{
+    #logo {
         float: right;
         padding-right: 2rem;
     }
 
-    #header p{
-         font-size: 1.5rem;
-     }
+    #header p {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 550px) {
+    #graph-container {
+        padding: 2.5rem;
+    }
 }
 
 
@@ -734,7 +745,7 @@ hr {
 
 /* Dropdown
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-Select-value{
+Select-value {
     cursor: pointer;
 }
 
@@ -788,6 +799,7 @@ Select-value{
         display: flex;
         flex-direction: row;
         justify-content: center;
+        height: 80rem;
     }
 }
 
