--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -91,7 +91,7 @@
 
 /* app-container
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-@media (min-width: 801px) {
+@media (min-width: 951px) {
     #app-container {
         width: 100%;
         display: flex;
@@ -166,8 +166,8 @@
     padding-top: 0;
 }
 
-@media(max-width:1500px){
-    .rc-slider-mark-text{
+@media (max-width: 1500px) {
+    .rc-slider-mark-text {
         font-size: 0.7vw;
     }
 }
@@ -186,7 +186,7 @@
     }
 }
 
-@media (max-width: 1300px){
+@media (max-width: 1300px) {
     #left-column {
         flex: 1 20%;
         margin: 0 3rem 0 0;
@@ -200,6 +200,13 @@
     }
 }
 
+@media (max-width: 1200px) {
+    #button-zero-threshold {
+        font-size: 0.8rem;
+        padding: 0
+    }
+
+}
 
 /*@media (max-width: 1300px) {*/
 /*#left-column {*/
@@ -244,7 +251,7 @@
     margin-top: 0.5rem;
 }
 
-@media (min-width: 801px) {
+@media (min-width: 951px) {
     #div-graphs {
         flex: 4 80%;
         display: flex;
@@ -252,25 +259,24 @@
         justify-content: center;
         align-items: stretch;
     }
-    #svm-graph-container{
+
+    #svm-graph-container {
         flex: 2 66%;
     }
-    #graphs-container{
-        flex: 1 33%
+
+    #graphs-container {
+        flex: 1 33%;
+        margin-top: 0.5rem;
     }
 
-    #graph-sklearn-svm{
+    #graph-sklearn-svm {
         height: 100%;
     }
 }
 
 @media (min-width: 1301px) {
-    #div-graphs{
+    #div-graphs {
         height: 83rem;
-    }
-
-    #graphs-container {
-        margin-top: 0.5rem;
     }
 
     #graph-line-roc-curve {
@@ -283,12 +289,8 @@
 }
 
 @media (max-width: 1300px) {
-    #div-graphs{
+    #div-graphs {
         height: 70rem;
-    }
-
-    #graphs-container {
-        margin-top: 0.5rem;
     }
 
     #graph-line-roc-curve {
@@ -297,6 +299,14 @@
 
     #graph-pie-confusion-matrix {
         height: 60%
+    }
+
+    .gtitle {
+        font-size: 1.25rem !important;
+    }
+
+    .xtitle, .ytitle {
+        font-size: 0.9rem !important;
     }
 }
 
@@ -346,5 +356,9 @@
 /* Remove Undo
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ._dash-undo-redo {
+    display: none;
+}
+
+#graph-line-roc-curve .modebar, #graph-pie-confusion-matrix.modebar {
     display: none;
 }
